MCPI/2.MCPI/Labworks/day17/.metadata/.plugins/org.eclipse.cdt.ui/can_loopback2.build.log
17:25:16 **** Incremental Build of configuration Debug for project can_loopback2 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/stm32f4xx_it.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/stm32f4xx_it.d" -MT"Core/Src/stm32f4xx_it.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/stm32f4xx_it.o"
../Core/Src/stm32f4xx_it.c:60:8: error: unknown type name 'TIM_HandleTypeDef'
   60 | extern TIM_HandleTypeDef htim1;
      |        ^~~~~~~~~~~~~~~~~
../Core/Src/stm32f4xx_it.c: In function 'TIM1_UP_TIM10_IRQHandler':
../Core/Src/stm32f4xx_it.c:226:3: warning: implicit declaration of function 'HAL_TIM_IRQHandler'; did you mean 'HAL_CAN_IRQHandler'? [-Wimplicit-function-declaration]
  226 |   HAL_TIM_IRQHandler(&htim1);
      |   ^~~~~~~~~~~~~~~~~~
      |   HAL_CAN_IRQHandler
../Core/Src/main.c:69:1: error: expected identifier or '(' before '{' token
   69 | {
      | ^
make: *** [Core/Src/subdir.mk:43: Core/Src/stm32f4xx_it.o] Error 1
make: *** Waiting for unfinished jobs....
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

17:25:16 Build Failed. 5 errors, 1 warnings. (took 688ms)

